syntax = "proto3";
option go_package = "/productPb";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int64 stock = 5;
    string created_at = 6;
}

message ProductIntroduction {
    string id = 1;
    string name = 2;
    string created_at = 3;
}

message Category {
    string id = 1;
    string name = 2;
    string created_at = 3;
}

message ProductProfile {
    Product product = 1;
    Category category = 2;
}

message ProductId {
    string productId = 1;
}

message StockManagerReq {
    string productId = 1;
    string topic = 2;
    int64 amount = 3;
}

service ProductService {
    rpc GetProductDetails(ProductId) returns (ProductProfile);
    rpc StockManager(StockManagerReq) returns (ProductProfile);
}